[package]
name = "vim-review"
version = "0.1.0"
edition = "2021"
authors = ["vim-review contributors"]
description = "A TUI for reviewing git changes with vim keybindings and inline comments"
readme = "README.md"
repository = "https://github.com/YOUR_USERNAME/vim-review"
license = "MIT"
keywords = ["git", "diff", "review", "vim", "tui"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "vr"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
git2 = { version = "0.19", default-features = false, features = ["vendored-openssl", "vendored-libgit2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
