[package]
name = "vim-review"
version = "0.2.1"
edition = "2021"
authors = ["vim-review contributors"]
description = "A TUI for reviewing git and mercurial changes with vim keybindings and inline comments"
readme = "README.md"
repository = "https://github.com/bobrenjc93/vr"
license = "MIT"
keywords = ["git", "mercurial", "hg", "diff", "review"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "vr"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
